# CurvesTestTask

./: CMakeLists.txt  README.md  main.cpp
curve_dll/dll_files/: Circle.cpp  Ellipse.cpp  Helix3D.cpp
curve_dll/include/: Circle.h  Curve.h  Ellipse.h  Helix3D.h
curve_dll/lib/: CurveLibrary.lib
example/: main.cpp
